--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -78,26 +78,26 @@
 				}
 			}
 		},
-		"authcognitocb733442": {
+		"authamazoncognitoauthservice": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/amplifyauthstarter-20181121143842-deployment/amplify-cfn-templates/auth/cognitocb733442-cloudformation-template.yml",
+				"TemplateURL": "https://s3.amazonaws.com/amplifyauthstarter-20181121150340-deployment/amplify-cfn-templates/auth/amazoncognitoauthservice-cloudformation-template.yml",
 				"Parameters": {
-					"identityPoolName": "cognitocb733442_identitypool_cb733442",
+					"identityPoolName": "amplifyauthstarterreactuserpool",
 					"allowUnauthenticatedIdentities": false,
 					"thirdPartyAuth": false,
-					"lambdaLogPolicy": "cognitocb733442_lambda_log_policy",
-					"openIdLambdaRoleName": "cognitocb733442_openid_lambda_role",
-					"openIdRolePolicy": "cognitocb733442_openid_pass_role_policy",
-					"openIdLambdaIAMPolicy": "cognitocb733442_openid_lambda_iam_policy",
-					"openIdLogPolicy": "cognitocb733442_openid_lambda_log_policy",
-					"userPoolName": "cognitocb733442_userpool_cb733442",
+					"lambdaLogPolicy": "amazoncognitoauthservice_lambda_log_policy",
+					"openIdLambdaRoleName": "amazoncognitoauthservice_openid_lambda_role",
+					"openIdRolePolicy": "amazoncognitoauthservice_openid_pass_role_policy",
+					"openIdLambdaIAMPolicy": "amazoncognitoauthservice_openid_lambda_iam_policy",
+					"openIdLogPolicy": "amazoncognitoauthservice_openid_lambda_log_policy",
+					"userPoolName": "amplifyauthstarterreactidentitypool",
 					"autoVerifiedAttributes": "email",
 					"mfaConfiguration": "OFF",
 					"mfaTypes": "SMS Text Message",
-					"roleName": "cognitocb733442_sns-role",
-					"roleExternalId": "cognitocb733442_role_external_id",
-					"policyName": "cognitocb733442-sns-policy",
+					"roleName": "amazoncognitoauthservice_sns-role",
+					"roleExternalId": "amazoncognitoauthservice_role_external_id",
+					"policyName": "amazoncognitoauthservice-sns-policy",
 					"smsAuthenticationMessage": "Your authentication code is {####}",
 					"smsVerificationMessage": "Your verification code is {####}",
 					"emailVerificationSubject": "Your verification code",
@@ -106,21 +106,21 @@
 					"passwordPolicyMinLength": 8,
 					"passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
 					"requiredAttributes": "email",
-					"userpoolClientName": "cognitocb733442_app_client",
+					"userpoolClientName": "amazoncognitoauthservice_app_client",
 					"userpoolClientGenerateSecret": true,
 					"userpoolClientRefreshTokenValidity": 30,
 					"userpoolClientReadAttributes": "email",
-					"mfaLambdaRole": "cognitocb733442_totp_lambda_role",
-					"mfaLambdaLogPolicy": "cognitocb733442_totp_lambda_log_policy",
-					"mfaPassRolePolicy": "cognitocb733442_totp_pass_role_policy",
-					"mfaLambdaIAMPolicy": "cognitocb733442_totp_lambda_iam_policy",
-					"userpoolClientLambdaRole": "cognitocb733442_userpoolclient_lambda_role",
-					"userpoolClientLogPolicy": "cognitocb733442_userpoolclient_lambda_log_policy",
-					"userpoolClientLambdaPolicy": "cognitocb733442_userpoolclient_lambda_iam_policy",
+					"mfaLambdaRole": "amazoncognitoauthservice_totp_lambda_role",
+					"mfaLambdaLogPolicy": "amazoncognitoauthservice_totp_lambda_log_policy",
+					"mfaPassRolePolicy": "amazoncognitoauthservice_totp_pass_role_policy",
+					"mfaLambdaIAMPolicy": "amazoncognitoauthservice_totp_lambda_iam_policy",
+					"userpoolClientLambdaRole": "amazoncognitoauthservice_userpoolclient_lambda_role",
+					"userpoolClientLogPolicy": "amazoncognitoauthservice_userpoolclient_lambda_log_policy",
+					"userpoolClientLambdaPolicy": "amazoncognitoauthservice_userpoolclient_lambda_iam_policy",
 					"userpoolClientSetAttributes": false,
-					"useDefault": "default",
-					"resourceName": "cognitocb733442",
+					"useDefault": "manual",
 					"authSelections": "identityPoolAndUserPool",
+					"resourceName": "amazoncognitoauthservice",
 					"authRoleName": {
 						"Ref": "AuthRoleName"
 					},
