--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,12 @@ yarn-error.log*
 *.sw*
 
 
+# amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/backend/amplify-meta.json
 aws-exports.js
 awsconfiguration.json
+
+# amplify optional
+amplify/team-provider-info.json
