--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -78,26 +78,26 @@
 				}
 			}
 		},
-		"authamazoncognitoauthservice": {
+		"authcognitoauthservice": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/amplifyauthstarter-20181121150340-deployment/amplify-cfn-templates/auth/amazoncognitoauthservice-cloudformation-template.yml",
+				"TemplateURL": "https://s3.amazonaws.com/amplifyauthreact-20181121153547-deployment/amplify-cfn-templates/auth/cognitoauthservice-cloudformation-template.yml",
 				"Parameters": {
-					"identityPoolName": "amplifyauthstarterreactuserpool",
+					"identityPoolName": "amplifyauthreactidentitypool",
 					"allowUnauthenticatedIdentities": false,
 					"thirdPartyAuth": false,
-					"lambdaLogPolicy": "amazoncognitoauthservice_lambda_log_policy",
-					"openIdLambdaRoleName": "amazoncognitoauthservice_openid_lambda_role",
-					"openIdRolePolicy": "amazoncognitoauthservice_openid_pass_role_policy",
-					"openIdLambdaIAMPolicy": "amazoncognitoauthservice_openid_lambda_iam_policy",
-					"openIdLogPolicy": "amazoncognitoauthservice_openid_lambda_log_policy",
-					"userPoolName": "amplifyauthstarterreactidentitypool",
+					"lambdaLogPolicy": "cognitoauthservice_lambda_log_policy",
+					"openIdLambdaRoleName": "cognitoauthservice_openid_lambda_role",
+					"openIdRolePolicy": "cognitoauthservice_openid_pass_role_policy",
+					"openIdLambdaIAMPolicy": "cognitoauthservice_openid_lambda_iam_policy",
+					"openIdLogPolicy": "cognitoauthservice_openid_lambda_log_policy",
+					"userPoolName": "amplifyauthreactuserpool",
 					"autoVerifiedAttributes": "email",
 					"mfaConfiguration": "OFF",
 					"mfaTypes": "SMS Text Message",
-					"roleName": "amazoncognitoauthservice_sns-role",
-					"roleExternalId": "amazoncognitoauthservice_role_external_id",
-					"policyName": "amazoncognitoauthservice-sns-policy",
+					"roleName": "cognitoauthservice_sns-role",
+					"roleExternalId": "cognitoauthservice_role_external_id",
+					"policyName": "cognitoauthservice-sns-policy",
 					"smsAuthenticationMessage": "Your authentication code is {####}",
 					"smsVerificationMessage": "Your verification code is {####}",
 					"emailVerificationSubject": "Your verification code",
@@ -106,21 +106,21 @@
 					"passwordPolicyMinLength": 8,
 					"passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
 					"requiredAttributes": "email",
-					"userpoolClientName": "amazoncognitoauthservice_app_client",
+					"userpoolClientName": "cognitoauthservice_app_client",
 					"userpoolClientGenerateSecret": true,
 					"userpoolClientRefreshTokenValidity": 30,
 					"userpoolClientReadAttributes": "email",
-					"mfaLambdaRole": "amazoncognitoauthservice_totp_lambda_role",
-					"mfaLambdaLogPolicy": "amazoncognitoauthservice_totp_lambda_log_policy",
-					"mfaPassRolePolicy": "amazoncognitoauthservice_totp_pass_role_policy",
-					"mfaLambdaIAMPolicy": "amazoncognitoauthservice_totp_lambda_iam_policy",
-					"userpoolClientLambdaRole": "amazoncognitoauthservice_userpoolclient_lambda_role",
-					"userpoolClientLogPolicy": "amazoncognitoauthservice_userpoolclient_lambda_log_policy",
-					"userpoolClientLambdaPolicy": "amazoncognitoauthservice_userpoolclient_lambda_iam_policy",
+					"mfaLambdaRole": "cognitoauthservice_totp_lambda_role",
+					"mfaLambdaLogPolicy": "cognitoauthservice_totp_lambda_log_policy",
+					"mfaPassRolePolicy": "cognitoauthservice_totp_pass_role_policy",
+					"mfaLambdaIAMPolicy": "cognitoauthservice_totp_lambda_iam_policy",
+					"userpoolClientLambdaRole": "cognitoauthservice_userpoolclient_lambda_role",
+					"userpoolClientLogPolicy": "cognitoauthservice_userpoolclient_lambda_log_policy",
+					"userpoolClientLambdaPolicy": "cognitoauthservice_userpoolclient_lambda_iam_policy",
 					"userpoolClientSetAttributes": false,
 					"useDefault": "manual",
 					"authSelections": "identityPoolAndUserPool",
-					"resourceName": "amazoncognitoauthservice",
+					"resourceName": "cognitoauthservice",
 					"authRoleName": {
 						"Ref": "AuthRoleName"
 					},
