--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "amplifyauthstarter",
+    "projectName": "amplifyauthreact",
     "frontend": "javascript",
     "javascript": {
         "framework": "react",
