--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@ awsconfiguration.json
 
 ## amplify optional
 amplify/team-provider-info.json
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
