--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,6 @@
 {
-    "projectName": "amplifyauthreact",
+    "projectName": "awsamplifyauthstarte",
+    "version": "2.0",
     "frontend": "javascript",
     "javascript": {
         "framework": "react",
