--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,18 @@ yarn-error.log*
 *.sw*
 
 
-# amplify
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/backend/amplify-meta.json
-aws-exports.js
-awsconfiguration.json
-
 # amplify optional
 amplify/team-provider-info.json
+
+#amplify
+src/aws-exports.js
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
