--- a/package.json
+++ b/package.json
@@ -3,29 +3,39 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "aws-amplify": "^1.1.10",
-    "aws-amplify-react": "^2.1.4",
-    "aws-amplify-react-native": "^2.0.8",
-    "react": "16.6.1",
-    "react-native": "0.57.5",
-    "react-navigation": "^3.0.0"
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/netinfo": "^5.7.0",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
+    "amazon-cognito-identity-js": "^3.2.6",
+    "aws-amplify": "^2.2.7",
+    "aws-amplify-react": "^3.1.8",
+    "react": "16.11.0",
+    "react-native": "0.62.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.1",
-    "react-test-renderer": "16.6.1"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "./src/assets/fonts/"
-    ]
   }
 }
