--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "RNAmplifyAuth",
+    "projectName": "RNExpoAuth",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
